<resources>
    <string name="app_name">GTSE</string>
    <string name="permission_rationale_message">You have rejected us to apply for authorization, please agree to authorization, otherwise the function can\'t be used normally!</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
    <string name="no_permission">无权限</string>
    <string name="http_parse_error">返回报文格式错误</string>
    <string name="http_network_error">网络连接异常，请检查网络连接</string>
    <string name="http_ssl_error">证书验证失败</string>
    <string name="http_unknown_error">未知错误</string>
    <string name="network_error">网络错误，请稍后重试</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="no_data">暂无数据</string>
    <string name="no_more_data">没有更多啦</string>
    <string name="confirm_alert">确定%1$s吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="double_click_exit">再按一次退出哦</string>
    <string name="et_type_number">0123456789</string>
    <string name="et_type_number_point">0123456789.</string>

    <string name="register">注册</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="phone_number_format_error">手机号码格式错误</string>
    <string name="input_password">请输入密码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="verification_code_format_error">验证码格式错误</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="resend">重新发送(%1$s)</string>
    <string name="send_success">发送成功</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="phone_number_login">手机号登录</string>
    <string name="agree">登录注册即代表您同意GTSE</string>
    <string name="terms">《隐私服务条款》</string>
    <string name="input_password1">请输入6-16位密码</string>
    <string name="recommend_code">推荐码(选填)</string>
    <string name="register_success">注册成功</string>
    <string name="input_password2">请输入新密码</string>
    <string name="modify_password_success">修改密码成功</string>

    <string name="tab_text0">商城</string>
    <string name="tab_text1">资讯</string>
    <string name="tab_text2">钱包</string>
    <string name="tab_text3">个人中心</string>

    <string name="integral">%1$s积分</string>
    <string name="convert">兑换</string>

    <string name="search">搜索</string>

    <string name="exchange_rmb">=¥%1$s</string>
    <string name="exchange_dollar">=$%1$s</string>
    <string name="transaction">交易</string>
    <string name="wallet">钱包</string>
    <string name="yesterday_rose">昨日涨幅</string>
    <string name="plus">+%1$s</string>
    <string name="today_highest">今日最高</string>
    <string name="today_lowest">今日最低</string>
    <string name="market_value">市值</string>
    <string name="rmb">¥%1$s</string>
    <string name="quantity">量(24h)</string>
    <string name="taf">%1$s TAF</string>
    <string name="amount">额(24h)</string>
    <string name="increase">涨幅波动</string>
    <string name="day">1d</string>
    <string name="week">1w</string>
    <string name="month">1mon</string>
    <string name="all">all</string>
    <string name="more">更多</string>
    <string name="plus_dollar">+$%1$s</string>
    <string name="bracket">(%1$s)</string>

    <string name="message_list">消息列表</string>

    <string name="setting_center">设置中心</string>
    <string name="usual_address">常用地址</string>
    <string name="modify">修改</string>
    <string name="add_address">添加地址</string>
    <string name="modify_address">修改地址</string>
    <string name="recipient">收件人</string>
    <string name="input_recipient">请填写收件人姓名</string>
    <string name="contacts_phone">联系人手机</string>
    <string name="input_contacts_phone">请填写收件人手机号码</string>
    <string name="area">所在地区</string>
    <string name="select_area">请选择所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="input_detailed_address">请填写详细信息</string>
    <string name="postal_code">邮政编码</string>
    <string name="optional">选填</string>
    <string name="save">保存</string>
    <string name="usual_contacts">常用联系人</string>
    <string name="phone_number">手机号：%1$s</string>
    <string name="id_number">身份证号：%1$s</string>
    <string name="add_contacts">添加联系人</string>
    <string name="modify_contacts">修改联系人</string>
    <string name="name_and_certificate_info">姓名及证件信息</string>
    <string name="contacts">联系人</string>
    <string name="input_contacts_name">请填写联系人姓名</string>
    <string name="certificate_type">证件类型</string>
    <string name="id_card">身份证</string>
    <string name="id_number1">证件号码</string>
    <string name="input_id_number">请填写证件号码</string>
    <string name="phone_number1">手机号码</string>
    <string name="input_phone_number1">请填写手机号码</string>
    <string name="email">电子邮件</string>
    <string name="crowd">人群</string>
    <string name="adult">成人</string>
    <string name="child">儿童</string>
    <string name="log_out">退出登录</string>

    <string name="my_integral">我的GTSE积分</string>
    <string name="gtse_integral">%1$sGTSE积分</string>

    <string name="order_management">订单管理</string>
    <string name="order_mine">我的订单</string>
    <string name="order_all">全部订单</string>
    <string name="order_status1">待收货</string>
    <string name="order_status2">待审核</string>
    <string name="order_status3">待使用</string>
    <string name="order_status4">已完成</string>
    <string name="order_no">订单号：%1$s</string>
    <string name="delivery_time">发货时间：%1$s</string>
    <string name="product_name">商品名称：%1$s</string>

    <string name="address_book">地址簿</string>
    <string name="input_nickname_or_address">请输入昵称或地址</string>

    <string name="security_center">安全中心</string>

    <string name="about_us">关于我们</string>

    <string name="invite_friends">邀请好友，超多积分等你拿</string>
    <string name="immediately_invited">立即邀请>></string>

    <string name="total_integral">GTSE积分总额</string>
    <string name="total_get">累计获得</string>
    <string name="today_get">今日获得</string>
    <string name="available_consume">可用商城消费</string>
    <string name="convertible">可兑换GTSE</string>
    <string name="convert_integral">GTSE兑换的积分</string>
    <string name="integral_detail">GTSE积分明细</string>

    <string name="my_invitation">我的邀请</string>
    <string name="shop_name">Royal latex泰国皇家乳胶枕头</string>
    <string name="tourise_name">《泰国巴厘岛5日游》蓝梦岛环岛，快艇出海浮潜恶魔眼泪海边秋海上独木舟，游泳酒店，24小时管家服务</string>
    <string name="shop_integral">3000积分</string>
    <string name="shop_text0">查看尺码和颜色</string>r
    <string name="shop_text1">产品参数</string>
    <string name="tourise_text0">产品特色</string>r
    <string name="tourise_text1_info">快艇出海环岛，泳池酒店，天天出发，余位充足，管家服务贴心护航！</string>
    <string name="tourise_text1">出发城市：全国</string>
    <string name="tourise_text3">选择出游人数和日期</string>
    <string name="tourise_text4">签注/签证</string>
    <string name="tourise_text5">出行警告</string>

    <string name="confirm_order">确认订单</string>
    <string name="repurchase">立即换购</string>

    <string name="select_product">选择产品</string>

</resources>
