<?xml version="1.0" encoding="utf-8"?>
<com.witfrog.gtse.widget.WindowInsetConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.usualaddressdetail.UsualAddressDetailActivity">

    <include layout="@layout/include_top_bar" />

    <TextView
        android:id="@+id/tv_recipient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_32"
        android:background="@drawable/bg_white_solid_left4"
        android:paddingLeft="@dimen/size_16"
        android:paddingTop="@dimen/size_8"
        android:paddingRight="@dimen/size_16"
        android:paddingBottom="@dimen/size_8"
        android:text="@string/recipient"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tv_contacts_phone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.witfrog.gtse.widget.ContainsEmojiEditText
        android:id="@+id/et_input_recipient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_white_solid_right4"
        android:gravity="center_vertical"
        android:hint="@string/input_recipient"
        android:singleLine="true"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_recipient"
        app:layout_constraintLeft_toRightOf="@+id/tv_recipient"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_recipient" />

    <TextView
        android:id="@+id/tv_contacts_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:background="@drawable/bg_white_solid_left4"
        android:paddingLeft="@dimen/size_16"
        android:paddingTop="@dimen/size_8"
        android:paddingRight="@dimen/size_16"
        android:paddingBottom="@dimen/size_8"
        android:text="@string/contacts_phone"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipient" />

    <EditText
        android:id="@+id/et_input_contacts_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_white_solid_right4"
        android:digits="@string/et_type_number"
        android:gravity="center_vertical"
        android:hint="@string/input_contacts_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:singleLine="true"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_contacts_phone"
        app:layout_constraintLeft_toRightOf="@+id/tv_contacts_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_contacts_phone" />

    <TextView
        android:id="@+id/tv_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:background="@drawable/bg_white_solid_left4"
        android:paddingLeft="@dimen/size_16"
        android:paddingTop="@dimen/size_8"
        android:paddingRight="@dimen/size_16"
        android:paddingBottom="@dimen/size_8"
        android:text="@string/area"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tv_contacts_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_contacts_phone" />

    <TextView
        android:id="@+id/tv_select_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_white_solid_right4"
        android:gravity="center_vertical"
        android:hint="@string/select_area"
        android:singleLine="true"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_area"
        app:layout_constraintLeft_toRightOf="@+id/tv_area"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_area" />

    <TextView
        android:id="@+id/tv_detailed_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:background="@drawable/bg_white_solid_left4"
        android:paddingLeft="@dimen/size_16"
        android:paddingTop="@dimen/size_8"
        android:paddingRight="@dimen/size_16"
        android:paddingBottom="@dimen/size_8"
        android:text="@string/detailed_address"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tv_contacts_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_area" />

    <com.witfrog.gtse.widget.ContainsEmojiEditText
        android:id="@+id/et_input_detailed_address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_white_solid_right4"
        android:gravity="center_vertical"
        android:hint="@string/input_detailed_address"
        android:singleLine="true"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detailed_address"
        app:layout_constraintLeft_toRightOf="@+id/tv_detailed_address"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detailed_address" />

    <TextView
        android:id="@+id/tv_postal_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        android:background="@drawable/bg_white_solid_left4"
        android:paddingLeft="@dimen/size_16"
        android:paddingTop="@dimen/size_8"
        android:paddingRight="@dimen/size_16"
        android:paddingBottom="@dimen/size_8"
        android:text="@string/postal_code"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tv_contacts_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_detailed_address" />

    <EditText
        android:id="@+id/et_postal_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_white_solid_right4"
        android:digits="@string/et_type_number"
        android:gravity="center_vertical"
        android:hint="@string/optional"
        android:inputType="numberSigned"
        android:maxLength="6"
        android:singleLine="true"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_postal_code"
        app:layout_constraintLeft_toRightOf="@+id/tv_postal_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_postal_code" />
</com.witfrog.gtse.widget.WindowInsetConstraintLayout>