<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Padding_16_8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_solid4">

    <TextView
        android:id="@+id/tv_order_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_8"
        android:text="@string/order_no"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_status"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delivery_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/delivery_time"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="@+id/tv_order_no"
        app:layout_constraintRight_toRightOf="@+id/tv_order_no"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_no" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:textColor="@color/light_black2"
        android:textSize="@dimen/font_16"
        android:text="@string/product_name"
        app:layout_constraintLeft_toLeftOf="@+id/tv_order_no"
        app:layout_constraintRight_toRightOf="@+id/tv_order_no"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_time" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>